# Qmodule

./: .gitignore  TODO  script.py
Qconsume/: pyproject.toml
Qdata/: t.py  test.py
Qlimiter/: main.py  pyproject.toml  test.py
Qlogger/: dd.py  example.ini  main.py  pyproject.toml  setup.py  test.py
Qperiodic/: classb.py  test.py  timer.py
Qpgsql/: main.py  pyproject.toml  req-chill.txt  timestapz.py  xmain.py
Qplot/: test.py  test2.py
Qprocon/: main.py  pyproject.toml
Qproduce/: pyproject.toml
Qupbit/: main.py  pip-chill.txt  pyproject.toml  req-chill.txt  setup.py
Qupbit/Qupbit/: __init__.py  upbit.py
Qupbit/Qupbit.egg-info/: PKG-INFO  SOURCES.txt
Qupbit/Qupbit/api/: __init__.py
Qupbit/Qupbit/api/qoutation/: market.py
Qupbit/Qupbit/docs/: readme
Qupbit/Qupbit/models/: __init__.py  candle.py  info.py  market copy.py  market.py
Qupbit/Qupbit/models/qoutation/: candle.py  market.py  websocket.py
Qupbit/Qupbit/modules/: candle.py  market.py
Qupbit/Qupbit/public/: __init__.py  market.py
Qupbit/Qupbit/quotation/: __init__.py  market.py
Qupbit/Qupbit/tools/: __init__.py  hint.py  msg.py  parser.py  timez.py  tracer.py  valider.py
Qupbit/Qupbit/utils/: config.py  custom_print.py  customlog.py  log_custom.py  logger_color.py  logger_custom.py  print_divider.py
Qupbit/Qupbit/websocket/: test.py
Qupbit/_dev/_test/: matrket.py
Qupbit/_dev/_test/websocket/: msg.py
Qupbit/_sql/: table.sql
Qupbit/_test/websocket/: pingpong.py
Qupbit/dev/_docs/: 요청수제한
Qupbit/dev/_sql/: table.sql
Qupbit/dev/models/: candle.py  market.py
(+371 files in other folders)
